@@ -10,6 +10,10 @@
              documentation in the Limiter composite appender. Fixed docs
              and added C<appender_method_on_flush> parameter to support
              appender flush calls by the limiter.
+   *    (ms) [rt.cpan.org #79960] Fabrice Gabolde asked for %X{x} to be 
+             interpolated as NULL for the database appender if its value is 
+             undef. The DBI appender now inits PatternLayout with the 
+             undef_column_name parameter set to undef (defaults to "[undef]").
 
 1.38 (2012/09/23)
    *    (ms) Bob Kleemann reported that logdie() in wrapper classes
